regression/parse_pool/progtest6.sfp.out

sfc in program parse_pool/progtest6.sfp
syntax error at line 2, position 33:
configuration hello { nullApp() start() nullMac() nullRadio() } 
                                ^
